--- a/app/src/main/res/layout/fragment_nonmain_grant.xml
+++ b/app/src/main/res/layout/fragment_nonmain_grant.xml
@@ -86,7 +86,15 @@
                 android:id="@+id/grantButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="Predict" />
+
+            <ProgressBar
+                android:id="@+id/progress1"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                tools:visibility="gone" />
 
             <TextView
                 android:id="@+id/grantAnswer"
